bk_ida/gccida/c1/subst_stack_regs_pat
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_stack_regs_pat/src/reg-stack.c:1922:6: error: use of undeclared identifier 'v43'
rtx *v43; // rdi 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_stack_regs_pat/src/reg-stack.c:1933:6: error: use of undeclared identifier 'v54'
rtx *v54; // rbp 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_stack_regs_pat/src/reg-stack.c:1934:6: error: use of undeclared identifier 'v55'
rtx *v55; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_stack_regs_pat/src/reg-stack.c:1939:4: error: expected ';' after expression
rtx regno_note; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_stack_regs_pat/src/reg-stack.c:1939:5: error: use of undeclared identifier 'regno_note'; did you mean 'reg_note'?
rtx regno_note; // rbp 
    ^~~~~~~~~~
    reg_note
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_stack_regs_pat/src/reg-stack.c:1890:5: note: 'reg_note' declared here
rtx reg_note; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_stack_regs_pat/src/reg-stack.c:1942:6: error: use of undeclared identifier 'v63'
rtx *v63; // rbp 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_stack_regs_pat/src/reg-stack.c:1948:4: error: expected ';' after expression
rtx v69; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_stack_regs_pat/src/reg-stack.c:1948:5: error: use of undeclared identifier 'v69'
rtx v69; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_stack_regs_pat/src/reg-stack.c:1955:6: error: use of undeclared identifier 'reg'
rtx *reg; // [rsp+8h] [rbp-60h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_stack_regs_pat/src/reg-stack.c:1956:6: error: use of undeclared identifier 'rega'; did you mean 'read'?
rtx *rega; // [rsp+8h] [rbp-60h] 
     ^~~~
     read
/usr/include/unistd.h:363:16: note: 'read' declared here
extern ssize_t read (int __fd, void *__buf, size_t __nbytes) __wur;
               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_stack_regs_pat/src/reg-stack.c:1956:5: error: invalid operands to binary expression ('struct rtx_def *' and 'ssize_t (int, void *, size_t)' (aka 'long (int, void *, unsigned long)'))
rtx *rega; // [rsp+8h] [rbp-60h] 
~~~ ^~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_stack_regs_pat/src/reg-stack.c:1959:4: error: expected ';' after expression
rtx v80; // [rsp+18h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_stack_regs_pat/src/reg-stack.c:1959:5: error: use of undeclared identifier 'v80'
rtx v80; // [rsp+18h] [rbp-50h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_stack_regs_pat/src/reg-stack.c:1960:4: error: expected ';' after expression
rtx v81; // [rsp+18h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_stack_regs_pat/src/reg-stack.c:1960:5: error: use of undeclared identifier 'v81'
rtx v81; // [rsp+18h] [rbp-50h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_stack_regs_pat/src/reg-stack.c:1970:33: error: expected expression
true_reg = get_true_reg( ( rtx *)pat->fld); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_stack_regs_pat/src/reg-stack.c:1985:27: error: expected expression
v8 = get_true_reg( ( rtx *)pat->fld); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_stack_regs_pat/src/reg-stack.c:1994:12: error: expected ')'
if ( ( rtx)insn[2] != pat ) 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_stack_regs_pat/src/reg-stack.c:1994:4: note: to match this '('
if ( ( rtx)insn[2] != pat ) 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_stack_regs_pat/src/reg-stack.c:2008:1: error: use of undeclared identifier 'v43'
v43 = v10; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_stack_regs_pat/src/obj/reg-stack.o] Error 1
